--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -84,7 +84,12 @@
 					document.dispatchEvent(themeChangeEvent);
 					const logo = document.querySelector("#Machape");
 					console.log("logo: ", logo);
-					logo?.setAttribute("style", rootInDarkMode() ? "filter:invert(1)" : "");
+					logo?.setAttribute(
+						"style",
+						rootInDarkMode()
+							? "filter:invert(0) drop-shadow(-1px 0px 1px white) drop-shadow(1px 0px 1px white) drop-shadow(0px -1px 1px white) drop-shadow(0px 1px 1px white)"
+							: "",
+					);
 					// set the aria-checked attribute
 					button.setAttribute("aria-checked", String(rootInDarkMode()));
 				},
@@ -97,5 +102,13 @@
 		}
 	}
 
+	const logo = document.querySelector("#Machape");
+	console.log("logo: ", logo);
+	logo?.setAttribute(
+		"style",
+		rootInDarkMode()
+			? "filter:invert(0) drop-shadow(-1px 0px 1px white) drop-shadow(1px 0px 1px white) drop-shadow(0px -1px 1px white) drop-shadow(0px 1px 1px white)"
+			: "",
+	);
 	customElements.define("theme-toggle", ThemeToggle);
 </script>
